Fix z-indexing issues
(And introduce at least one, but document it)

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -66,6 +66,16 @@ html, body, .jspaint {
 		display: none !important;
 	}
 }
+.menus {
+	z-index: 5000; /*
+		really high so the menu popups go over subwindows (which dynamically increase z-index)
+		and also over other-user cursors in multi-user mode
+		also at least 2 so popups go over the canvas handles,
+		and at least 1 so that the modern theme's menubar can have a shadow
+	*/
+	/* TODO: put the menu popups in their own container, separate from the menubar */
+	/* FIXME: ..especially since now the text of the buttons goes over windows */
+}
 .component-area,
 .menus *,
 .window-titlebar {
@@ -244,6 +254,7 @@ html, body, .jspaint {
 	position: absolute;
 	width: 3px;
 	height: 3px;
+	z-index: 1;
 }
 
 
