--- a/styles/themes/modern.css
+++ b/styles/themes/modern.css
@@ -88,7 +88,6 @@ body {
 
 .menus {
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
-	z-index: 1;
 }
 
 .menu-button,
